# biomedic-backend

./: docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/endpoints/v1/: blood_serum.py  chromosomes.py  hematological_slides.py  ki67.py  melanoma.py  sperm.py
app/core/metadata/: metadata.py
app/core/schemas/: root_schemas.py
configuration/: configs.py  settings.toml
docker/: Dockerfile.api
docs/: README.md
