[project]
name = "biomedic-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
authors = [
    { name = "Lucas Praciano", email = "luskcct@gmail.com" },
]
dependencies = [
    "dynaconf>=3.2.12",
    "fastapi>=0.124.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "ultralytics>=8.3.235",
    "uvicorn>=0.38.0",
]
